✨Add dark mode toggle and fix double icon issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,8 +18,12 @@
 
 
 @import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
 
-
+/* @theme{
+  --color-primary: #3b82f6;
+  --color-primary-dark: #0d0d0d;
+} */
 :root {
   --color-lightHover: #fcf4ff;
   --color-darkHover: #2a004a;
@@ -29,6 +33,13 @@
   --box-shadow-black: 4px 4px 0 #000;
   --box-shadow-white: 4px 4px 0 #fff;
   --grid-template-columns-auto: repeat(auto-fit, minmax(200px, 1fr));
+  --bg: #ffffff;
+  --text: #000000;
+}
+
+.dark-mode {
+  --bg: #000000;
+  --text: #ffffff;
 }
 
 
@@ -40,3 +51,4 @@
 .ovo-text {
   font-family: var(--font-ovo);
 }
+
